<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/app_name"
        app:showAsAction="always">


        <menu>
            <item
                android:id="@+id/fav_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/favourite_books"

                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/log_out"
                app:showAsAction="ifRoom" />
        </menu>


    </item>


</menu>